# varbincode

./: Cargo.toml  README.md
src/: de.rs
