[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
name = "varbincode"
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/wez/varbincode"
description = "A binary encoder / decoder with variable length integer encoding implementation in Rust."
license = "MIT"
documentation = "https://docs.rs/varbincode"

[dependencies]
byteorder = "1.3"
leb128 = "0.2"
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
